# Luapp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  constexprTypename.h  lookup_table.h  luapp50.cpp  luapp50.h  luapp50_d.h  luapp51.cpp  luapp51.h  luapp51_d.h  luapp52.cpp  luapp52.h  luapp52_d.h  luapp53.cpp  luapp53.h  luapp53_d.h  luapp54.cpp  luapp54.h  luapp54_d.h  luapp55.cpp  luapp55.h  luapp55_d.h  luapp_cast.h  luapp_common.h  luapp_decorator.h  luapp_function.h  luapp_serialization.h  luapp_userdata.h  luappjit.cpp  luappjit.h  luappjit_d.h  setup_lua.bat  setup_lua.sh
.github/workflows/: ci.yml
include/luapp/: constexprTypename.h  lookup_table.h  luapp50.h  luapp50_d.h  luapp51.h  luapp51_d.h  luapp52.h  luapp52_d.h  luapp53.h  luapp53_d.h  luapp54.h  luapp54_d.h  luapp55.h  luapp55_d.h  luapp_cast.h  luapp_common.h  luapp_decorator.h  luapp_function.h  luapp_serialization.h  luapp_userdata.h  luappjit.h  luappjit_d.h
src50/: luapp50_d.cpp
src51/: luapp51.cpp  luapp51_d.cpp
src52/: luapp52.cpp  luapp52_d.cpp
src53/: luapp53.cpp  luapp53_d.cpp
src54/: luapp54_d.cpp
src55/: luapp55.cpp  luapp55_d.cpp
srcjit/: luappjit.cpp  luappjit_d.cpp
tests/: AutoCleanStack.cpp  BaseDatatypes.cpp  CreateDelete.cpp  DtorTest.h  Extension.cpp  Functions.cpp  Hook.cpp  Iterate.cpp  LocalAccess.cpp  Operators.cpp  RunLua.cpp  Serialization.cpp  StackAccess.cpp  Tables.cpp  Typename.cpp  UserClass.cpp  luaver.h
